syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message InteractionsCountRequestProto {
  repeated int64 event_id = 1;
}




